Avoid hardcoding db credentials

--- a/freelancer/src/main/fabric8/credentials-secret.yml
+++ b/freelancer/src/main/fabric8/credentials-secret.yml
@@ -3,5 +3,5 @@ kind: "Secret"
 metadata:
   name: "my-database-secret"
 stringData:
-  user: "jboss"
-  password: "jboss"
+  user: "CHANGE_ME"
+  password: "CHANGE_ME"
